Termino diseño de item de activity

--- a/app/src/main/res/layout/learn_item.xml
+++ b/app/src/main/res/layout/learn_item.xml
@@ -1,14 +1,15 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/imgLearnCategorie"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:contentDescription="@string/imageDescription"
+        android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,8 +20,8 @@
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
         android:layout_centerInParent="true"
         android:indeterminate="false"
         android:max="100"
@@ -28,10 +29,10 @@
         android:progressDrawable="@drawable/circular_progress"
         android:rotation="90"
         android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="@+id/imgLearnCategorie"
-        app:layout_constraintEnd_toEndOf="@+id/imgLearnCategorie"
-        app:layout_constraintStart_toStartOf="@+id/imgLearnCategorie"
-        app:layout_constraintTop_toTopOf="@+id/imgLearnCategorie" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/txtLearnCategori"
@@ -43,6 +44,7 @@
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/imgLearnCategorie"
+        app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="@+id/imgLearnCategorie"
-        app:layout_constraintTop_toBottomOf="@+id/imgLearnCategorie" />
+        app:layout_constraintTop_toBottomOf="@+id/progressBar" />
 </androidx.constraintlayout.widget.ConstraintLayout>
