--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -198,7 +198,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView54" />
 
     <ImageView
-        android:id="@+id/imageView55"
+        android:id="@+id/imgSignGame"
         android:layout_width="180dp"
         android:layout_height="180dp"
         android:layout_marginTop="48dp"
@@ -222,7 +222,7 @@
         android:textStyle="bold"
         app:cornerRadius="10dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView55"
+        app:layout_constraintTop_toBottomOf="@+id/imgSignGame"
         tools:ignore="DuplicateSpeakableTextCheck" />
 
     <Button
@@ -239,5 +239,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/btnOption1"
-        app:layout_constraintTop_toBottomOf="@+id/imageView55" />
+        app:layout_constraintTop_toBottomOf="@+id/imgSignGame" />
 </androidx.constraintlayout.widget.ConstraintLayout>
