--- a/app/src/main/res/layout/activity_categori.xml
+++ b/app/src/main/res/layout/activity_categori.xml
@@ -38,7 +38,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/dictionary"
-            app:tint="@color/black" />
+            app:tint="@color/white" />
 
         <ImageView
             android:id="@+id/btmCategoriLearn"
