--- a/app/src/main/res/layout/activity_certificates.xml
+++ b/app/src/main/res/layout/activity_certificates.xml
@@ -90,6 +90,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@string/imageDescription"
+            android:tint="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btmCertificatesDictionary"
             app:layout_constraintStart_toStartOf="parent"
